--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome
-description: Cross between religion, mathematical formulas, and cyber security  #### Check Back On My Site Weekly, Im am a real person adding new things everyday I promise hah.  
+description: Cross between religion, mathematical formulas, and cyber security
