--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome
-description: "Once you turn your back on your own beliefs, it's all over"-Naruto  
-Cross between religion, mathematical formulas, and cyber security
+description: "Once you turn your back on your own beliefs, it's all over"-NarutoCross between religion, mathematical formulas, and cyber security
