--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome
-description: Once you turn your back on your own beliefs, it's all overNarutoCross between religion, mathematical formulas, and cyber security
+description: "Once you turn your back on your own beliefs, it's all over"- Naruto
