--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
-title: Welcome
-description: > Once you turn your back on your own beliefs, it's all over Naruto
+theme: jekyll-theme-slate  
+title: Naruto once said, Once you question your own beliefs, then it's all over.  
+description: Cross between Religion, Mathematical formulas, and Cyber Security.  
