--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,18 @@
 theme: jekyll-theme-slate  
 title: Naruto once said, Once you question your own beliefs, then it's all over.  
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
+footer-links:
+  dribbble:
+  email: joubin@jabbari.io
+  facebook: joubinj
+  flickr:
+  github: joubin
+  instagram: joubin
+  linkedin: joubin-jabbari-b219119
+  pinterest:
+  rss: # just type anything here for a working RSS icon
+  twitter: joubinj
+  stackoverflow: users/1048138/cripto # your stackoverflow profile, e.g. "users/3807565/akshay"
+  youtube: # channel/<your_long_string> or user/<user-name>
+  googleplus: # anything in your profile username that comes after plus.google.com/
+
