--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: jekyll-theme-slate  
 title: Naruto once said, Once you question your own beliefs, then it's all over.  
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
+
+
 footer-links:
   dribbble:
   email: joubin@jabbari.io
@@ -15,4 +17,20 @@ footer-links:
   stackoverflow: users/1048138/cripto # your stackoverflow profile, e.g. "users/3807565/akshay"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  
+permalink: /:title/
+
+
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+
+# Exclude these files from your production _site
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
 
