--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@ theme: jekyll-theme-slate
 title: Naruto once said, Once you question your own beliefs, then it's all over.  
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
 
+navbar-links:
+  Home: "index"
+  Resources: "https://kammywhams.github.io/Paintings"
+  Beautiful Jekyll: "https://kammywhams.github.io/Verses"
+  Learn markdown: "https://kammywhams.github.io/Knowledge"
+  Author's home: "https://kammywhams.github.io/Research"
 
 footer-links:
   dribbble:
