--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,16 @@ theme: jekyll-theme-slate
 title: Naruto once said, Once you question your own beliefs, then it's all over.  
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
 
-paginate: 5
+paginate: 7
+
+include: ["_pages"]
+
+# Build settings
+markdown: kramdown
+gems:
+  - jekyll-feed
+  - jekyll-seo-tag
+exclude:
+  - Gemfile
+  - Gemfile.lock
 
