--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
-title: "Naruto once said, Once you question your own beliefs, then it's all over".  
+theme: jekyll-theme-minimal
+title: Naruto once said, Once you question your own beliefs, then it's all over.    
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
 
