--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-midnight  
 title: Naruto once said, Once you question your own beliefs, then it's all over.    
 description: Cross between Religion, Mathematical formulas, and Cyber Security.  
+url: "kammywhams.github.io"  
+markdown: kramdown  
