--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,5 @@ defaults:
       path: "assets/"
     values:
       image: true
+      
+ permalink: /:categories/:year/:month/:day/:title:output_ext
