--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,12 @@
-theme: jekyll-theme-midnight  
-title: Naruto once said, Once you question your own beliefs, then it's all over.    
-description: Cross between Religion, Mathematical formulas, and Cyber Security.  
+theme: jekyll-theme-midnight
+title: Naruto once said, Once you question your own beliefs, then it's all over.
+description: Cross between Religion, Mathematical formulas, and Cyber Security.
+url: "kammywhams.github.io"
+markdown: kramdown
+permalink: /:categories/:year/:month/:day/:title:output_ext
+defaults:
+  - scope:
+      path: "assets/
+    values:
+      image: true
 
