--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title:output_ext
 defaults:
   - scope:
-      path: "assets/
+      path: "/assets/"
     values:
       image: true
 
