--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Naruto once said, Once you question your own beliefs, then it's all over.
+title: Challenge your mind, change the world.
 description: Investigating cross between Religion, Mathematical formulas, and Cyber Security.
