--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Challenge your mind, change the world.
-description: Investigating cross between Religion, Mathematical formulas, and Cyber Security.
+description: Researching cross between Religion, Mathematical formulas, and Cyber Security.
