--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-candyman
 title: Challenge your mind, change the world.
 description: Researching cross between Religion, Mathematical formulas, and Cyber Security.
