--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/hacker@v0.2.0
 title: Challenge your mind, change the world.
-description: Researching cross between Religion, Mathematical formulas, and Cyber Security.
+description: Researching cross between Religion, Mathematical Formulas, and Cyber Security.
