--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/hacker@v0.2.0
-title: Once you turn your back on your own beliefs it's over
+title: Challenge your mind, change the world
 description: Cyber Security Research
